--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </form>
                     </div>
                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input px-4 py-3" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                     </div>
                 </div>
             </div>
