--- a/index.html
+++ b/index.html
@@ -41,6 +41,80 @@
             </div>
         </nav>
     </header>
+    <p>aaaaaaaaaaaaaaaaaaaaaaaaa</p>
+    <footer>
+        <div class="row container-fluid d-flex justify-content-around text-center bg-body-tertiary">
+            <div class="col-4 text-start">
+                <h5>About</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates molestiae blanditiis magnam odit, hic sed quo earum delectus, ratione, nesciunt ea pariatur obcaecati voluptatum quaerat iusto molestias esse saepe.</p>
+                <p><strong>Email:</strong> info@jstemplate.net</p>
+                <p><strong>Phone:</strong> 880 123 456 789</p>
+
+            </div>
+            <div class="col-2">
+                <h5>Quick Link</h5>
+                <nav class="navbar justify-content-center">
+                    <ul class="navbar-nav">
+                        <li>
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Archieved</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Author</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-2">
+                <h5>Category</h5>
+                <nav class="navbar justify-content-center">
+                    <ul class="navbar-nav">
+                        <li>
+                            <a class="nav-link" href="#">Lifestyle</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Technology</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Travel</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Business</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Economy</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Sports</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-4">
+                <h5>Weekly newsletter</h5>
+                <p>Get blog articles and offers via email!</p>
+                <form>
+                    <div class="input-group input-group-lg mb-1">
+                        <input type="email" class="form-control" id="subscribeEmail" placeholder="Enter your email">
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-primary btn-lg">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
