--- a/noticia.html
+++ b/noticia.html
@@ -41,6 +41,113 @@
             </div>
         </nav>
     </header>
+    <main>
+        <h1>The impact of Technology on the Workplace:
+            How Technology is Changing</h1>
+        <div class="my-4">
+            <p><img src="img/nullpfp.png" alt="">Tracey Wilson August 20, 2022</p>
+        </div>
+        <img class="rounded-4 img-fluid mb-4" src="/img/Church.jpeg" alt="">
+        <p>Traveling is an enriching experience that opens up new horizons, exposes us to different cultures, and creates memories that last a lifetime. However, traveling can also be stressful and overwhelming, especially if you don't plan and prepare adequately. In this blog article, we'll explore tips and tricks for a memorable journey and how to make the most of your travels.</p>
+        <p>One of the most rewarding aspects of traveling is immersing yourself in the local culture and customs. This includes trying local cuisine, attending cultural events and festivals, and interacting with locals. Learning a few phrases in the local language can also go a long way in making connections and showing respect.</p>
+        <h5>Research Your Destination</h5>
+        <p>Before embarking on your journey, take the time to research your destination. This includes understanding the local culture, customs, and laws, as well as identifying top attractions, restaurants, and accommodations. Doing so will help you navigate your destination with confidence and avoid any cultural faux pas.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In hendrerit gravida rutrum quisque non tellus orci ac auctor. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Viverra adipiscing at in tellus.</p>
+        <h5>Plan Your Itinerary</h5>
+        <p>While it's essential to leave room for spontaneity and unexpected adventures, having a rough itinerary can help you make the most of your time and budget. Identify the must-see sights and experiences and prioritize them according to your interests and preferences. This will help you avoid overscheduling and ensure that you have time to relax and enjoy your journey.</p>
+        <p>Vitae sapien pellentesque habitant morbi tristique. Luctus venenatis lectus magna fringilla. Nec ullamcorper sit amet risus nullam eget felis. Tincidunt arcu non sodales neque sodales ut etiam sit amet.</p>
+        <div class="advertisment border border-black-start">
+            <p>“ Traveling can expose you to new environments and potential health risks, so it's crucial to take precautions to stay safe and healthy. ”</p>
+        </div>
+        <img class="rounded-4 img-fluid mb-4" src="/img/travel.jpeg" alt="">
+        <div class="advertisment">
+            <p>Advertisement</p>
+            <h6><strong>You can place ads</strong></h6>
+            <p>750X100</p>
+        </div>
+        <h5>Pack Lightly and Smartly</h5>
+        <p>Packing can be a daunting task, but with some careful planning and smart choices, you can pack light and efficiently. Start by making a packing list and sticking to it, focusing on versatile and comfortable clothing that can be mixed and matched. Invest in quality luggage and packing organizers to maximize space and minimize wrinkles.</p>
+        <h5>Stay Safe and Healthy</h5>
+        <p>Traveling can expose you to new environments and potential health risks, so it's crucial to take precautions to stay safe and healthy. This includes researching any required vaccinations or medications, staying hydrated, washing your hands frequently, and using sunscreen and insect repellent. It's also essential to keep your valuables safe and secure and to be aware of your surroundings at all times.</p>
+        <h5>Immerse Yourself in the Local Culture</h5>
+        <p>One of the most rewarding aspects of traveling is immersing yourself in the local culture and customs. This includes trying local cuisine, attending cultural events and festivals, and interacting with locals. Learning a few phrases in the local language can also go a long way in making connections and showing respect.</p>
+        <h5>Capture Memories</h5>
+        <p>Finally, don't forget to capture memories of your journey. Whether it's through photographs, journaling, or souvenirs, preserving the moments and experiences of your travels can bring joy and nostalgia for years to come. However, it's also essential to be present in the moment and not let technology distract you from the beauty of your surroundings.</p>
+        <h5>Conclusion:</h5>
+        <p>Traveling is an art form that requires a blend of planning, preparation, and spontaneity. By following these tips and tricks, you can make the most of your journey and create memories that last a lifetime. So pack your bags, embrace the adventure, and enjoy the ride.</p>
+    </main>
+    <footer>
+        <div class="row container-fluid d-flex justify-content-around text-center bg-body-tertiary">
+            <div class="col-4 text-start">
+                <h5>About</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates molestiae blanditiis magnam odit, hic sed quo earum delectus, ratione, nesciunt ea pariatur obcaecati voluptatum quaerat iusto molestias esse saepe.</p>
+                <p><strong>Email:</strong> info@jstemplate.net</p>
+                <p><strong>Phone:</strong> 880 123 456 789</p>
+            </div>
+            <div class="col-2">
+                <h5>Quick Link</h5>
+                <nav class="navbar justify-content-center">
+                    <ul class="navbar-nav">
+                        <li>
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Archieved</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Author</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-2">
+                <h5>Category</h5>
+                <nav class="navbar justify-content-center">
+                    <ul class="navbar-nav">
+                        <li>
+                            <a class="nav-link" href="#">Lifestyle</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Technology</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Travel</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Business</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Economy</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Sports</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-4">
+                <h5>Weekly newsletter</h5>
+                <p>Get blog articles and offers via email!</p>
+                <form class="m-5">
+                    <div class="input-group input-group-lg mb-1">
+                        <input type="email" class="form-control" id="subscribeEmail" placeholder="Enter your email">
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-primary btn-lg">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
