--- a/noticia.html
+++ b/noticia.html
@@ -42,6 +42,7 @@
         </nav>
     </header>
     <main>
+        <span class="badge text-bg-primary p-2">Technology</span>
         <h1>The impact of Technology on the Workplace:
             How Technology is Changing</h1>
         <div class="my-4">
