--- a/noticies.html
+++ b/noticies.html
@@ -41,6 +41,29 @@
                 </div>
             </div>
         </nav>
+        
+        <div class="Doe">
+            <div class="Doe-2">
+                <p>
+                    <img src="img/Image (1).png" alt=""><strong>Jonathan Doe</strong>
+                    <small>
+                        Collaborator & Editor</small>
+                </p>
+            </div>
+            <div class="Doe-2">
+                <p>Meet Jonathan Doe, a passionate writer and blogger with a love for
+                    technology and travel. Jonathan holds a degree in Computer Science and
+                    has spent years working in the tech industry, gaining a deep understanding 
+                    of the impact technology has on our lives.
+                </p>
+                <div>
+                    <img src="img/a-button.png" alt="">
+                    <img src="img/a-button (1).png" alt="">
+                    <img src="img/a-button (2).png" alt="">
+                    <img src="img/a-button (3).png" alt="">
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <div class="posts">
