--- a/single_post.html
+++ b/single_post.html
@@ -21,11 +21,11 @@
                     <a class="navbar-brand" href="#">Meta<strong>Blog</strong></a>
                 </div>
                 <div class="navbar-nav">
-                    <a class="nav-link"  href="/index.html">Home</a>
-                    <a class="nav-link" href="/index.html">Blog</a>
-                    <a class="nav-link active" aria-current="page" href="#">Single Post</a>
-                    <a class="nav-link" href="/noticies.html">Pages</a>
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link"  href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Blog</a>
+                    <a class="nav-link active" aria-current="page" href="single_post.html">Single Post</a>
+                    <a class="nav-link" href="author_page.html">Pages</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </div>
                 <div class="d-flex flex-row">
                     <div>
@@ -52,7 +52,7 @@
         <div class="my-4">
             <p><img src="img/nullpfp.png" alt="">Tracey Wilson August 20, 2022</p>
         </div>
-        <img class="rounded-4 img-fluid mb-4" src="/img/Church.jpeg" alt="">
+        <img class="rounded-4 img-fluid mb-4" src="img/Church.jpeg" alt="">
         <p class="source-serif-4">Traveling is an enriching experience that opens up new horizons, exposes us to different cultures, and creates memories that last a lifetime. However, traveling can also be stressful and overwhelming, especially if you don't plan and prepare adequately. In this blog article, we'll explore tips and tricks for a memorable journey and how to make the most of your travels.</p>
         <p class="source-serif-4">One of the most rewarding aspects of traveling is immersing yourself in the local culture and customs. This includes trying local cuisine, attending cultural events and festivals, and interacting with locals. Learning a few phrases in the local language can also go a long way in making connections and showing respect.</p>
         <h5>Research Your Destination</h5>
