--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="#">Blog</a>
-                    <a class="nav-link" href="single_post.html">Single Post</a>
-                    <a class="nav-link" href="author_page.html">Pages</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="./single_post.html">Single Post</a>
+                    <a class="nav-link" href="./author_page.html">Pages</a>
+                    <a class="nav-link" href="./contact.html">Contact</a>
                 </div>
                 <div class="d-flex flex-row">
                     <div>
